--- a/.vercelignore
+++ b/.vercelignore
@@ -2,8 +2,5 @@
 /node_modules
 .env
 .git
-storage/framework/cache/data/*
-storage/framework/sessions/*
-storage/framework/testing/*
-storage/framework/views/*
-storage/logs/*.log
+storage/*
+!storage/app/public
