--- a/vercel.json
+++ b/vercel.json
@@ -2,29 +2,17 @@
     "version": 2,
     "framework": null,
     "builds": [
-        {
-            "src": "public/index.php",
-            "use": "vercel-php@0.6.0"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
-        }
+        { "src": "public/index.php", "use": "vercel-php@0.6.0" },
+        { "src": "public/**", "use": "@vercel/static" }
     ],
     "routes": [
-        {
-            "src": "/(css|js|images|fonts|storage|favicon.ico)(.*)",
-            "dest": "/public/$1$2"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/public/index.php"
-        }
+        { "src": "/(css|js|images|fonts|storage|favicon.ico)(.*)", "dest": "/public/$1$2" },
+        { "src": "/(.*)", "dest": "/public/index.php" }
     ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://NAMA_PROYEK_ANDA.vercel.app",
+        "APP_URL": "https://NAMA_PROYEK_LARAVEL_ANDA.vercel.app",
         "APP_KEY": "@laravel-app-key",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
@@ -44,7 +32,14 @@
         "DB_USERNAME": "@db-username",
         "DB_PASSWORD": "@db-password",
 
-        "FRONTEND_URL": "https://URL_FRONTEND_VUE_ANDA.vercel.app",
-        "CORS_ALLOWED_ORIGINS": "https://URL_FRONTEND_VUE_ANDA.vercel.app"
+        "MAIL_MAILER": "smtp",
+        "MAIL_HOST": "@mail-host",
+        "MAIL_PORT": "@mail-port",
+        "MAIL_USERNAME": "@mail-username",
+        "MAIL_PASSWORD": "@mail-password",
+        "MAIL_ENCRYPTION": "tls",
+
+        "FRONTEND_URL": "https://jwr-comp.netlify.app",
+        "CORS_ALLOWED_ORIGINS": "https://jwr-comp.netlify.app"
     }
 }
