--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,19 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://NAMA_PROYEK_LARAVEL_ANDA.vercel.app",
-        "APP_KEY": "@laravel-app-key",
+        "APP_URL": "https://jwrcp-admin.vercel.app",
+
+        "APP_KEY": "base64:aTXuoI8g/GNAML+Q14fZyCUndklXCQHrdxWP6talC5c=",
+        "DB_HOST": "1cq6c.h.filess.io",
+        "DB_PORT": "3307",
+        "DB_DATABASE": "jwrbe_makelarger",
+        "DB_USERNAME": "jwrbe_makelarger",
+        "DB_PASSWORD": "2a00ac89ca69f68a02a0cd4e943b3f554288c1f1",
+        "MAIL_HOST": "sandbox.smtp.mailtrap.io",
+        "MAIL_PORT": "2525",
+        "MAIL_USERNAME": "69a7e5ebe66bc8",
+        "MAIL_PASSWORD": "d9b519339f9650",
+
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -24,21 +35,9 @@
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
         "SESSION_LIFETIME": "120",
-
         "DB_CONNECTION": "mysql",
-        "DB_HOST": "@db-host",
-        "DB_PORT": "@db-port",
-        "DB_DATABASE": "@db-database",
-        "DB_USERNAME": "@db-username",
-        "DB_PASSWORD": "@db-password",
-
         "MAIL_MAILER": "smtp",
-        "MAIL_HOST": "@mail-host",
-        "MAIL_PORT": "@mail-port",
-        "MAIL_USERNAME": "@mail-username",
-        "MAIL_PASSWORD": "@mail-password",
         "MAIL_ENCRYPTION": "tls",
-
         "FRONTEND_URL": "https://jwr-comp.netlify.app",
         "CORS_ALLOWED_ORIGINS": "https://jwr-comp.netlify.app"
     }
