--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
     "version": 2,
     "framework": null,
     "builds": [
+        {
+            "src": "api/php.ini",
+            "use": "@vercel/php/php.ini"
+        },
         { "src": "public/index.php", "use": "vercel-php@0.7.0" },
         { "src": "public/**", "use": "@vercel/static" }
     ],
